# utilitaires-peripheriques-raspberry

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.cargo/: audit.toml  config  config-compilation-croisee
.github/: CODEOWNERS
.github/workflows/: deploiement.yaml
ecran/: Cargo.toml
ecran/src/: detecteur.rs
ecran/src/capteur_luminosite/: capteur.rs  instruction.rs  mod.rs
examples/: afficher_jour.rs  afficher_jour_rusttype.rs
exemple_cairo/: Cargo.toml
exemple_cairo/examples/: afficher_jour.rs
exemple_rusttype/: Cargo.toml
exemple_rusttype/examples/: afficher_jour_rusttype.rs  afficher_jour_rusttype_test.rs
exemple_utilitaire_peripheriques/: Cargo.toml
exemple_utilitaire_peripheriques/examples/: determiner_localisation.rs
src/: eclairage.rs  lib.rs
src/capteur_luminosite/: capteur.rs  instruction.rs
src/ecran/: ecran.rs  mod.rs
utilitaires/: Cargo.toml
utilitaires/src/: lib.rs
utilitaires/src/capteur_luminosite/: capteur.rs
utilitaires_peripheriques/: Cargo.toml
utilitaires_peripheriques/src/: detecteur.rs  detecteur_mouvement.rs  fournisseur_localisation.rs  lib.rs  peripherique_usb.rs
utilitaires_peripheriques/src/capteur_luminosite/: instruction.rs
utilitaires_peripheriques/src/ecran/: instruction.rs  mod.rs
