[package]
name = "ecran"
version = "0.2.0"
edition = "2021"

[dev-dependencies]
cairo-rs = { version = "0", features = ["png"] }
env_logger = "0"
chrono = { version = "0", features = ["unstable-locales"] }
rusttype= "0"
image = { version = "0", default-features = false, features = ["png"] }

[dependencies]
flume = { version = "0" }
rppal = { version = "0" }
log = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
