[package]
name = "exemples_cairo"
version = "0.2.0"
edition = "2021"

[dev-dependencies]
cairo-rs = { version = "0", features = ["png"] }
env_logger = "0"
chrono = { version = "0", features = ["unstable-locales"] }

[dependencies]
ecran = { path = "../ecran" }
rppal = { version = "0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
log = "0"
flume = { version = "0" }