[package]
name = "exemples_utilitaire_peripheriques"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
env_logger = "0"

[dependencies]
utilitaires_peripheriques = { path = "../utilitaires_peripheriques",features=["fournisseur_localisation"] }
log = "0"
flume = { version = "0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
