[package]
name = "utilitaires_peripheriques"
version = "0.3.0"
edition = "2021"

[dependencies]
flume = { version = "0", optional = true  }
log = "0"
rppal = { version = "0" }
tokio = { version = "1", features = [] }
serde = { version = "1", features = ["derive"], optional = true  }
serde_json = {version = "1", optional = true }

[features]
capteur_luminosite = []
detecteur = ["dep:flume"]
eclairage = []
ecran = []
fournisseur_localisation = ["dep:serde", "dep:serde_json"]
peripherique_usb = []